--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/Brunofsaraujo/React_StructureNewProjects.git",
-  "author": "BrunoAraujo <bruno.araujo@uppertools.com.br>",
+  "author": "BrunoAraujo",
   "license": "MIT",
   "dependencies": {
-    "@babel/preset-react": "^7.16.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.0"
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "babel-loader": "^8.2.3",
+    "webpack": "^5.62.1",
+    "webpack-cli": "^4.9.1"
   }
 }
